# AP4A-Project

./: CMakeLists.txt  HumiditySensor.cpp  HumiditySensor.h  NoiseSensor.cpp  NoiseSensor.h  PressureSensor.cpp  PressureSensor.h  README.md  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  Server.cpp  Server.h  TemperatureSensor.cpp  TemperatureSensor.h  main.cpp
